--- a/theme.conf
+++ b/theme.conf
@@ -41,6 +41,7 @@
 16/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 16/apps vlc.svg
 16/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+16/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 16/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 16/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -53,6 +54,7 @@
 ####
 16/places desktop.svg user-desktop.svg
 16/places trash_empty.svg emptytrash.svg user-trash.svg
+16/places trash_full.svg
 16/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 16/places directory-documents.svg folder-documents.svg
 16/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -213,6 +215,7 @@
 16/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 16/actions zoom-in.svg gtk-zoom-in.svg
 16/actions zoom-out.svg gtk-zoom-out.svg
+16/actions shutdown.svg
 ####
 16/devices card_pci.svg audio-card.svg
 16/devices computer.svg system.svg
@@ -231,6 +234,7 @@
 16/devices internet_connect_no.svg network-wired-disconnected.svg
 16/devices scanner.svg
 16/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+16/devices flashcard.svg sdcard.svg
 ####
 16/categories game_chess.svg applications-boardgames.svg
 16/categories game_card.svg applications-cardgames.svg
@@ -293,6 +297,7 @@
 22/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 22/apps vlc.svg
 22/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+22/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 22/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 22/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -305,6 +310,7 @@
 ####
 22/places desktop.svg user-desktop.svg
 22/places trash_empty.svg emptytrash.svg user-trash.svg
+22/places trash_full.svg
 22/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 22/places directory-documents.svg folder-documents.svg
 22/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -465,6 +471,7 @@
 22/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 22/actions zoom-in.svg gtk-zoom-in.svg
 22/actions zoom-out.svg gtk-zoom-out.svg
+22/actions shutdown.svg
 ####
 22/devices card_pci.svg audio-card.svg
 22/devices computer.svg system.svg
@@ -483,6 +490,7 @@
 22/devices internet_connect_no.svg network-wired-disconnected.svg
 22/devices scanner.svg
 22/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+22/devices flashcard.svg sdcard.svg
 ####
 22/categories game_chess.svg applications-boardgames.svg
 22/categories game_card.svg applications-cardgames.svg
@@ -545,6 +553,7 @@
 24/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 24/apps vlc.svg
 24/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+24/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 24/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 24/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -557,6 +566,7 @@
 ####
 24/places desktop.svg user-desktop.svg
 24/places trash_empty.svg emptytrash.svg user-trash.svg
+24/places trash_full.svg
 24/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 24/places directory-documents.svg folder-documents.svg
 24/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -717,6 +727,7 @@
 24/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 24/actions zoom-in.svg gtk-zoom-in.svg
 24/actions zoom-out.svg gtk-zoom-out.svg
+24/actions shutdown.svg
 ####
 24/devices card_pci.svg audio-card.svg
 24/devices computer.svg system.svg
@@ -735,6 +746,7 @@
 24/devices internet_connect_no.svg network-wired-disconnected.svg
 24/devices scanner.svg
 24/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+24/devices flashcard.svg sdcard.svg
 ####
 24/categories game_chess.svg applications-boardgames.svg
 24/categories game_card.svg applications-cardgames.svg
@@ -797,6 +809,7 @@
 32/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 32/apps vlc.svg
 32/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+32/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 32/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 32/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -809,6 +822,7 @@
 ####
 32/places desktop.svg user-desktop.svg
 32/places trash_empty.svg emptytrash.svg user-trash.svg
+32/places trash_full.svg
 32/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 32/places directory-documents.svg folder-documents.svg
 32/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -969,6 +983,7 @@
 32/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 32/actions zoom-in.svg gtk-zoom-in.svg
 32/actions zoom-out.svg gtk-zoom-out.svg
+32/actions shutdown.svg
 ####
 32/devices card_pci.svg audio-card.svg
 32/devices computer.svg system.svg
@@ -987,6 +1002,7 @@
 32/devices internet_connect_no.svg network-wired-disconnected.svg
 32/devices scanner.svg
 32/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+32/devices flashcard.svg sdcard.svg
 ####
 32/categories game_chess.svg applications-boardgames.svg
 32/categories game_card.svg applications-cardgames.svg
@@ -1049,6 +1065,11 @@
 48/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 48/apps vlc.svg
 48/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+48/apps network.svg
+48/apps module.svg
+48/apps screen_lock.svg lock-screen.svg
+48/apps multimedia.svg
+48/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 48/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 48/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -1061,6 +1082,7 @@
 ####
 48/places desktop.svg user-desktop.svg
 48/places trash_empty.svg emptytrash.svg user-trash.svg
+48/places trash_full.svg
 48/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 48/places directory-documents.svg folder-documents.svg
 48/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -1221,6 +1243,7 @@
 48/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 48/actions zoom-in.svg gtk-zoom-in.svg
 48/actions zoom-out.svg gtk-zoom-out.svg
+48/actions shutdown.svg
 ####
 48/devices card_pci.svg audio-card.svg
 48/devices computer.svg system.svg
@@ -1239,6 +1262,7 @@
 48/devices internet_connect_no.svg network-wired-disconnected.svg
 48/devices scanner.svg
 48/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+48/devices flashcard.svg sdcard.svg
 ####
 48/categories game_chess.svg applications-boardgames.svg
 48/categories game_card.svg applications-cardgames.svg
@@ -1254,6 +1278,7 @@
 48/categories document.svg applications-office.svg
 48/categories preferences.svg gtk-preferences.svg applications-utilities.svg applications-accessories.svg configuration_section.svg preferences-desktop.svg preferences-other.svg preferences-system.svg
 48/categories science.svg applications-science.svg
+48/categories dialog-info.svg
 ####
 48/emblems about.svg emblem-favorite.svg
 48/emblems currency_dollar.svg emblem-money.svg
@@ -1301,6 +1326,7 @@
 64/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 64/apps vlc.svg
 64/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+64/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 64/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 64/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -1313,6 +1339,7 @@
 ####
 64/places desktop.svg user-desktop.svg
 64/places trash_empty.svg emptytrash.svg user-trash.svg
+64/places trash_full.svg
 64/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 64/places directory-documents.svg folder-documents.svg
 64/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -1471,6 +1498,7 @@
 64/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 64/actions zoom-in.svg gtk-zoom-in.svg
 64/actions zoom-out.svg gtk-zoom-out.svg
+64/actions shutdown.svg
 ####
 64/devices card_pci.svg audio-card.svg
 64/devices computer.svg system.svg
@@ -1489,6 +1517,7 @@
 64/devices internet_connect_no.svg network-wired-disconnected.svg
 64/devices scanner.svg
 64/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+64/devices flashcard.svg sdcard.svg
 ####
 64/categories game_chess.svg applications-boardgames.svg
 64/categories game_card.svg applications-cardgames.svg
@@ -1551,6 +1580,7 @@ scalable/apps palemoon.svg
 scalable/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
 scalable/apps vlc.svg
 scalable/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
+scalable/apps x.svg X.svg xorg.svg Xorg.svg
 ####
 scalable/status file_lock.svg gtk-dialog-authentication.svg dialog-password.svg
 scalable/status dialog-error.svg gtk-dialog-error.svg eror.svg
@@ -1563,6 +1593,7 @@ scalable/status caps-lock-warning.svg gtk-caps-lock-warning.svg
 ####
 scalable/places desktop.svg user-desktop.svg
 scalable/places trash_empty.svg emptytrash.svg user-trash.svg
+scalable/places trash_full.svg
 scalable/places directory.svg inode-directory.svg folder.svg gtk-directory.svg stock_folder.svg
 scalable/places directory-documents.svg folder-documents.svg
 scalable/places directory-downloads.svg folder-downloads.svg folder-download.svg
@@ -1721,6 +1752,7 @@ scalable/actions zoom-100.svg gtk-zoom-100.svg zoom-original.svg
 scalable/actions zoom-fit.svg gtk-zoom-fit.svg zoom-fit-best.svg zoom-best-fit.svg
 scalable/actions zoom-in.svg gtk-zoom-in.svg
 scalable/actions zoom-out.svg gtk-zoom-out.svg
+scalable/actions shutdown.svg
 ####
 scalable/devices card_pci.svg audio-card.svg
 scalable/devices computer.svg system.svg
@@ -1739,6 +1771,7 @@ scalable/devices dvdrom.svg media-optical-dvd.svg media-dvd.svg media-optical-dv
 scalable/devices internet_connect_no.svg network-wired-disconnected.svg
 scalable/devices scanner.svg
 scalable/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
+scalable/devices flashcard.svg sdcard.svg
 ####
 scalable/categories game_chess.svg applications-boardgames.svg
 scalable/categories game_card.svg applications-cardgames.svg
