fixed missing icon

--- a/theme.conf
+++ b/theme.conf
@@ -79,7 +79,8 @@
 16/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 16/mimetypes application-x-bit.svg application-x-bittorrent.svg
 16/mimetypes application-x-cd-image.svg
-16/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+16/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+16/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 16/mimetypes application-x-rpm.svg
 16/mimetypes application-x-deb.svg
 16/mimetypes application-zip.svg
@@ -335,7 +336,8 @@
 22/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 22/mimetypes application-x-bit.svg application-x-bittorrent.svg
 22/mimetypes application-x-cd-image.svg
-22/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+22/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+22/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 22/mimetypes application-x-rpm.svg
 22/mimetypes application-x-deb.svg
 22/mimetypes application-zip.svg
@@ -591,7 +593,8 @@
 24/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 24/mimetypes application-x-bit.svg application-x-bittorrent.svg
 24/mimetypes application-x-cd-image.svg
-24/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+24/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+24/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 24/mimetypes application-x-rpm.svg
 24/mimetypes application-x-deb.svg
 24/mimetypes application-zip.svg
@@ -847,7 +850,8 @@
 32/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 32/mimetypes application-x-bit.svg application-x-bittorrent.svg
 32/mimetypes application-x-cd-image.svg
-32/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+32/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+32/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 32/mimetypes application-x-rpm.svg
 32/mimetypes application-x-deb.svg
 32/mimetypes application-zip.svg
@@ -1107,7 +1111,8 @@
 48/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 48/mimetypes application-x-bit.svg application-x-bittorrent.svg
 48/mimetypes application-x-cd-image.svg
-48/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+48/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+48/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 48/mimetypes application-x-rpm.svg
 48/mimetypes application-x-deb.svg
 48/mimetypes application-zip.svg
@@ -1364,7 +1369,8 @@
 64/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 64/mimetypes application-x-bit.svg application-x-bittorrent.svg
 64/mimetypes application-x-cd-image.svg
-64/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+64/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+64/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 64/mimetypes application-x-rpm.svg
 64/mimetypes application-x-deb.svg
 64/mimetypes application-zip.svg
@@ -1618,7 +1624,8 @@ scalable/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlform
 scalable/mimetypes document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg
 scalable/mimetypes application-x-bit.svg application-x-bittorrent.svg
 scalable/mimetypes application-x-cd-image.svg
-scalable/mimetypes application-x-compressed-tar.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+scalable/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
+scalable/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 scalable/mimetypes application-x-rpm.svg
 scalable/mimetypes application-x-deb.svg
 scalable/mimetypes application-zip.svg
