--- a/theme.conf
+++ b/theme.conf
@@ -35,10 +35,13 @@
 16/apps mail.svg
 16/apps paint.svg mtpaint.svg
 16/apps gimp.svg
+16/apps evince.svg
 16/apps qupzilla.svg
 16/apps seamonkey.svg
 16/apps palemoon.svg
-16/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+16/apps vivaldi.svg
+16/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+16/apps smplayer.svg
 16/apps vlc.svg
 16/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 16/apps x.svg X.svg xorg.svg Xorg.svg
@@ -51,6 +54,8 @@
 16/status dialog-warning.svg gtk-dialog-warning.svg dialog-warning-symbolic.svg
 16/status network2.svg network_local.svg network-workgroup.svg gtk-network.svg network-wired.svg network.svg network-idle.svg
 16/status caps-lock-warning.svg gtk-caps-lock-warning.svg
+16/status playmode_loop.svg media-playlist-repeat.svg
+16/status playmode_shuffle.svg media-playlist-shuffle.svg
 ####
 16/places desktop.svg user-desktop.svg
 16/places trash_empty.svg emptytrash.svg user-trash.svg
@@ -217,6 +222,9 @@
 16/actions zoom-in.svg gtk-zoom-in.svg
 16/actions zoom-out.svg gtk-zoom-out.svg
 16/actions shutdown.svg
+16/actions building_block.svg geany-build.svg
+16/actions save-all.svg geany-save-all.svg
+16/actions close-all.svg geany-close-all.svg
 ####
 16/devices card_pci.svg audio-card.svg
 16/devices computer.svg system.svg
@@ -292,10 +300,13 @@
 22/apps mail.svg
 22/apps paint.svg mtpaint.svg 
 22/apps gimp.svg
+22/apps evince.svg
 22/apps qupzilla.svg
 22/apps seamonkey.svg
 22/apps palemoon.svg
-22/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+22/apps vivaldi.svg
+22/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+22/apps smplayer.svg
 22/apps vlc.svg
 22/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 22/apps x.svg X.svg xorg.svg Xorg.svg
@@ -474,6 +485,9 @@
 22/actions zoom-in.svg gtk-zoom-in.svg
 22/actions zoom-out.svg gtk-zoom-out.svg
 22/actions shutdown.svg
+22/actions building_block.svg geany-build.svg
+22/actions save-all.svg geany-save-all.svg
+22/actions close-all.svg geany-close-all.svg
 ####
 22/devices card_pci.svg audio-card.svg
 22/devices computer.svg system.svg
@@ -549,10 +563,13 @@
 24/apps mail.svg
 24/apps paint.svg mtpaint.svg
 24/apps gimp.svg
+24/apps evince.svg
 24/apps qupzilla.svg
 24/apps seamonkey.svg
 24/apps palemoon.svg
-24/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+24/apps vivaldi.svg
+24/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+24/apps smplayer.svg
 24/apps vlc.svg
 24/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 24/apps x.svg X.svg xorg.svg Xorg.svg
@@ -731,6 +748,9 @@
 24/actions zoom-in.svg gtk-zoom-in.svg
 24/actions zoom-out.svg gtk-zoom-out.svg
 24/actions shutdown.svg
+24/actions building_block.svg geany-build.svg
+24/actions save-all.svg geany-save-all.svg
+24/actions close-all.svg geany-close-all.svg
 ####
 24/devices card_pci.svg audio-card.svg
 24/devices computer.svg system.svg
@@ -806,10 +826,12 @@
 32/apps mail.svg
 32/apps paint.svg mtpaint.svg
 32/apps gimp.svg
+32/apps evince.svg
 32/apps qupzilla.svg
 32/apps seamonkey.svg
-32/apps palemoon.svg
-32/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+32/apps vivaldi.svg
+32/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+32/apps smplayer.svg
 32/apps vlc.svg
 32/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 32/apps x.svg X.svg xorg.svg Xorg.svg
@@ -988,6 +1010,9 @@
 32/actions zoom-in.svg gtk-zoom-in.svg
 32/actions zoom-out.svg gtk-zoom-out.svg
 32/actions shutdown.svg
+32/actions building_block.svg geany-build.svg
+32/actions save-all.svg geany-save-all.svg
+32/actions close-all.svg geany-close-all.svg
 ####
 32/devices card_pci.svg audio-card.svg
 32/devices computer.svg system.svg
@@ -1063,10 +1088,12 @@
 48/apps mail.svg
 48/apps paint.svg mtpaint.svg
 48/apps gimp.svg
+48/apps evince.svg
 48/apps qupzilla.svg
 48/apps seamonkey.svg
-48/apps palemoon.svg
-48/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+48/apps vivaldi.svg
+48/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+48/apps smplayer.svg
 48/apps vlc.svg
 48/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 48/apps network.svg
@@ -1249,6 +1276,9 @@
 48/actions zoom-in.svg gtk-zoom-in.svg
 48/actions zoom-out.svg gtk-zoom-out.svg
 48/actions shutdown.svg
+48/actions building_block.svg geany-build.svg
+48/actions save-all.svg geany-save-all.svg
+48/actions close-all.svg geany-close-all.svg
 ####
 48/devices card_pci.svg audio-card.svg
 48/devices computer.svg system.svg
@@ -1325,10 +1355,12 @@
 64/apps mail.svg
 64/apps paint.svg mtpaint.svg
 64/apps gimp.svg
+64/apps evince.svg
 64/apps qupzilla.svg
 64/apps seamonkey.svg
-64/apps palemoon.svg
-64/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+64/apps vivaldi.svg
+64/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+64/apps smplayer.svg
 64/apps vlc.svg
 64/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 64/apps x.svg X.svg xorg.svg Xorg.svg
@@ -1580,10 +1612,12 @@ scalable/apps internet.svg browser.svg
 scalable/apps mail.svg
 scalable/apps paint.svg mtpaint.svg
 scalable/apps gimp.svg
+scalable/apps evince.svg
 scalable/apps qupzilla.svg
 scalable/apps seamonkey.svg
-scalable/apps palemoon.svg
-scalable/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg smplayer.svg
+scalable/apps vivaldi.svg
+scalable/apps gnome-mplayer.svg mplayer.svg gmplayer.svg xine.svg gxine.svg
+scalable/apps smplayer.svg
 scalable/apps vlc.svg
 scalable/apps terminal.svg urxvt.svg rxvt.svg xterm.svg console.svg
 scalable/apps x.svg X.svg xorg.svg Xorg.svg
