--- a/theme.conf
+++ b/theme.conf
@@ -74,7 +74,7 @@
 ####
 16/mimetypes application-pet.svg
 16/mimetypes pdf.svg application-pdf.svg
-16/mimetypes application-kernel.svg application-x-linux-kernel.svg
+16/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 16/mimetypes application-rss+xml.svg application-atom+xml.svg
 16/mimetypes application-postscript.svg application-x-gzpostscript.svg
 16/mimetypes application-rtf.svg application-x-abiword.svg
@@ -87,7 +87,7 @@
 16/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 16/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 16/mimetypes application-x-rpm.svg
-16/mimetypes application-x-deb.svg
+16/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 16/mimetypes application-zip.svg
 16/mimetypes application-cpio.svg application-x-cpio.svg
 16/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -337,7 +337,7 @@
 ####
 22/mimetypes application-pet.svg
 22/mimetypes pdf.svg application-pdf.svg
-22/mimetypes application-kernel.svg application-x-linux-kernel.svg
+22/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 22/mimetypes application-rss+xml.svg application-atom+xml.svg
 22/mimetypes application-postscript.svg application-x-gzpostscript.svg
 22/mimetypes application-rtf.svg application-x-abiword.svg
@@ -350,7 +350,7 @@
 22/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 22/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 22/mimetypes application-x-rpm.svg
-22/mimetypes application-x-deb.svg
+22/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 22/mimetypes application-zip.svg
 22/mimetypes application-cpio.svg application-x-cpio.svg
 22/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -600,7 +600,7 @@
 ####
 24/mimetypes application-pet.svg
 24/mimetypes pdf.svg application-pdf.svg
-24/mimetypes application-kernel.svg application-x-linux-kernel.svg
+24/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 24/mimetypes application-rss+xml.svg application-atom+xml.svg
 24/mimetypes application-postscript.svg application-x-gzpostscript.svg
 24/mimetypes application-rtf.svg application-x-abiword.svg
@@ -613,7 +613,7 @@
 24/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 24/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 24/mimetypes application-x-rpm.svg
-24/mimetypes application-x-deb.svg
+24/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 24/mimetypes application-zip.svg
 24/mimetypes application-cpio.svg application-x-cpio.svg
 24/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -862,7 +862,7 @@
 ####
 32/mimetypes application-pet.svg
 32/mimetypes pdf.svg application-pdf.svg
-32/mimetypes application-kernel.svg application-x-linux-kernel.svg
+32/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 32/mimetypes application-rss+xml.svg application-atom+xml.svg
 32/mimetypes application-postscript.svg application-x-gzpostscript.svg
 32/mimetypes application-rtf.svg application-x-abiword.svg
@@ -875,7 +875,7 @@
 32/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 32/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 32/mimetypes application-x-rpm.svg
-32/mimetypes application-x-deb.svg
+32/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 32/mimetypes application-zip.svg
 32/mimetypes application-cpio.svg application-x-cpio.svg
 32/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -1128,7 +1128,7 @@
 ####
 48/mimetypes application-pet.svg
 48/mimetypes pdf.svg application-pdf.svg
-48/mimetypes application-kernel.svg application-x-linux-kernel.svg
+48/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 48/mimetypes application-rss+xml.svg application-atom+xml.svg
 48/mimetypes application-postscript.svg application-x-gzpostscript.svg
 48/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1141,7 +1141,7 @@
 48/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 48/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 48/mimetypes application-x-rpm.svg
-48/mimetypes application-x-deb.svg
+48/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 48/mimetypes application-zip.svg
 48/mimetypes application-cpio.svg application-x-cpio.svg
 48/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -1391,7 +1391,7 @@
 ####
 64/mimetypes application-pet.svg
 64/mimetypes pdf.svg application-pdf.svg
-64/mimetypes application-kernel.svg application-x-linux-kernel.svg
+64/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 64/mimetypes application-rss+xml.svg application-atom+xml.svg
 64/mimetypes application-postscript.svg application-x-gzpostscript.svg
 64/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1404,7 +1404,7 @@
 64/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 64/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 64/mimetypes application-x-rpm.svg
-64/mimetypes application-x-deb.svg
+64/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 64/mimetypes application-zip.svg
 64/mimetypes application-cpio.svg application-x-cpio.svg
 64/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
@@ -1648,7 +1648,7 @@ scalable/places bookmark.svg user-bookmarks.svg
 ####
 scalable/mimetypes application-pet.svg
 scalable/mimetypes pdf.svg application-pdf.svg
-scalable/mimetypes application-kernel.svg application-x-linux-kernel.svg
+scalable/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
 scalable/mimetypes application-rss+xml.svg application-atom+xml.svg
 scalable/mimetypes application-postscript.svg application-x-gzpostscript.svg
 scalable/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1661,7 +1661,7 @@ scalable/mimetypes application-x-cd-image.svg
 scalable/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg
 scalable/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg
 scalable/mimetypes application-x-rpm.svg
-scalable/mimetypes application-x-deb.svg
+scalable/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 scalable/mimetypes application-zip.svg
 scalable/mimetypes application-cpio.svg application-x-cpio.svg
 scalable/mimetypes application-initramfs-gz.svg application-initramfs-xz.svg application-x-initrd
