mimetypes: add application-x-java-jnlp-file.svg

--- a/theme.conf
+++ b/theme.conf
@@ -97,7 +97,7 @@
 16/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 16/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 16/mimetypes application-x-generic.svg application.svg
-16/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+16/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 16/mimetypes application-x-php.svg
 16/mimetypes application-x-desktop.svg
 16/mimetypes application-x-m4.svg
@@ -360,7 +360,7 @@
 22/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 22/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 22/mimetypes application-x-generic.svg application.svg
-22/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+22/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg  application-x-java-jnlp-file.svg
 22/mimetypes application-x-php.svg
 22/mimetypes application-x-desktop.svg
 22/mimetypes application-x-m4.svg
@@ -623,7 +623,7 @@
 24/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 24/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 24/mimetypes application-x-generic.svg application.svg
-24/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+24/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 24/mimetypes application-x-php.svg
 24/mimetypes application-x-desktop.svg
 24/mimetypes application-x-m4.svg
@@ -885,7 +885,7 @@
 32/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 32/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 32/mimetypes application-x-generic.svg application.svg
-32/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+32/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 32/mimetypes application-x-php.svg
 32/mimetypes application-x-desktop.svg
 32/mimetypes application-x-m4.svg
@@ -1151,7 +1151,7 @@
 48/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 48/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 48/mimetypes application-x-generic.svg application.svg
-48/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+48/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 48/mimetypes application-x-php.svg
 48/mimetypes application-x-desktop.svg
 48/mimetypes application-x-m4.svg
@@ -1414,7 +1414,7 @@
 64/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 64/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 64/mimetypes application-x-generic.svg application.svg
-64/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+64/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 64/mimetypes application-x-php.svg
 64/mimetypes application-x-desktop.svg
 64/mimetypes application-x-m4.svg
@@ -1671,7 +1671,7 @@ scalable/mimetypes application-x-ext4-image.svg application-x-ext3-image.svg app
 scalable/mimetypes application-x-flash-video.svg application-x-shockwave-flash.svg application-vnd.adobe.flash.movie.svg
 scalable/mimetypes application-x-font.svg application-x-font-afm.svg application-x-font-linux-pcf.svg application-x-font-pcf.svg application-x-font-speedo.svg application-x-font-ttf.svg
 scalable/mimetypes application-x-generic.svg application.svg
-scalable/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg
+scalable/mimetypes application-x-java.svg application-x-jar.svg application-x-java-archive.svg application-x-java-jnlp-file.svg
 scalable/mimetypes application-x-php.svg
 scalable/mimetypes application-x-desktop.svg
 scalable/mimetypes application-x-m4.svg
