--- a/theme.conf
+++ b/theme.conf
@@ -245,10 +245,11 @@
 16/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 16/devices flashcard.svg sdcard.svg
 ####
-16/categories game_chess.svg applications-boardgames.svg
-16/categories game_card.svg applications-cardgames.svg
-16/categories game_puzzle.svg applications-puzzles.svg
-16/categories game.svg applications-games.svg
+16/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+16/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+16/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+16/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+16/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 16/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 16/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 16/categories java.svg applications-java.svg
@@ -508,10 +509,11 @@
 22/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 22/devices flashcard.svg sdcard.svg
 ####
-22/categories game_chess.svg applications-boardgames.svg
-22/categories game_card.svg applications-cardgames.svg
-22/categories game_puzzle.svg applications-puzzles.svg
-22/categories game.svg applications-games.svg
+22/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+22/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+22/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+22/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+22/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 22/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 22/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 22/categories java.svg applications-java.svg
@@ -771,10 +773,11 @@
 24/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 24/devices flashcard.svg sdcard.svg
 ####
-24/categories game_chess.svg applications-boardgames.svg
-24/categories game_card.svg applications-cardgames.svg
-24/categories game_puzzle.svg applications-puzzles.svg
-24/categories game.svg applications-games.svg
+24/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+24/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+24/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+24/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+24/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 24/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 24/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 24/categories java.svg applications-java.svg
@@ -1033,10 +1036,11 @@
 32/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 32/devices flashcard.svg sdcard.svg
 ####
-32/categories game_chess.svg applications-boardgames.svg
-32/categories game_card.svg applications-cardgames.svg
-32/categories game_puzzle.svg applications-puzzles.svg
-32/categories game.svg applications-games.svg
+32/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+32/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+32/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+32/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+32/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 32/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 32/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 32/categories java.svg applications-java.svg
@@ -1299,10 +1303,11 @@
 48/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 48/devices flashcard.svg sdcard.svg
 ####
-48/categories game_chess.svg applications-boardgames.svg
-48/categories game_card.svg applications-cardgames.svg
-48/categories game_puzzle.svg applications-puzzles.svg
-48/categories game.svg applications-games.svg
+48/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+48/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+48/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+48/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+48/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 48/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 48/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 48/categories java.svg applications-java.svg
@@ -1557,10 +1562,11 @@
 64/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 64/devices flashcard.svg sdcard.svg
 ####
-64/categories game_chess.svg applications-boardgames.svg
-64/categories game_card.svg applications-cardgames.svg
-64/categories game_puzzle.svg applications-puzzles.svg
-64/categories game.svg applications-games.svg
+64/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+64/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+64/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+64/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+64/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 64/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 64/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 64/categories java.svg applications-java.svg
@@ -1814,10 +1820,11 @@ scalable/devices scanner.svg
 scalable/devices disk_usb.svg gnome-dev-removable-usb.svg drive-removable-media.svg usbpendrive_unmount.svg
 scalable/devices flashcard.svg sdcard.svg
 ####
-scalable/categories game_chess.svg applications-boardgames.svg
-scalable/categories game_card.svg applications-cardgames.svg
-scalable/categories game_puzzle.svg applications-puzzles.svg
-scalable/categories game.svg applications-games.svg
+scalable/categories game_chess.svg applications-boardgames.svg Fun-boardgame.svg
+scalable/categories game_card.svg applications-cardgames.svg Fun-cardgame.svg
+scalable/categories game_puzzle.svg applications-puzzles.svg Fun-puzzle.svg
+scalable/categories game_shooter.svg Fun-arcade.svg Fun-shooter.svg
+scalable/categories game.svg applications-games.svg Fun-Sub.svg Fun-adventure.svg
 scalable/categories wallpaper.svg applications-graphics.svg applications-interfacedesign.svg
 scalable/categories internet.svg applications-internet.svg applications-webbrowsers.svg
 scalable/categories java.svg applications-java.svg
