add media-playlist* links

--- a/theme.conf
+++ b/theme.conf
@@ -320,6 +320,8 @@
 22/status dialog-warning.svg gtk-dialog-warning.svg dialog-warning-symbolic.svg
 22/status network2.svg network_local.svg network-workgroup.svg gtk-network.svg network-wired.svg network.svg network-idle.svg
 22/status caps-lock-warning.svg gtk-caps-lock-warning.svg
+22/status playmode_loop.svg media-playlist-repeat.svg
+22/status playmode_shuffle.svg media-playlist-shuffle.svg
 ####
 22/places desktop.svg user-desktop.svg
 22/places trash_empty.svg emptytrash.svg user-trash.svg
@@ -584,6 +586,8 @@
 24/status dialog-warning.svg gtk-dialog-warning.svg dialog-warning-symbolic.svg
 24/status network2.svg network_local.svg network-workgroup.svg gtk-network.svg network-wired.svg network.svg network-idle.svg
 24/status caps-lock-warning.svg gtk-caps-lock-warning.svg
+24/status playmode_loop.svg media-playlist-repeat.svg
+24/status playmode_shuffle.svg media-playlist-shuffle.svg
 ####
 24/places desktop.svg user-desktop.svg
 24/places trash_empty.svg emptytrash.svg user-trash.svg
@@ -847,6 +851,8 @@
 32/status dialog-warning.svg gtk-dialog-warning.svg dialog-warning-symbolic.svg
 32/status network2.svg network_local.svg network-workgroup.svg gtk-network.svg network-wired.svg network.svg network-idle.svg
 32/status caps-lock-warning.svg gtk-caps-lock-warning.svg
+32/status playmode_loop.svg media-playlist-repeat.svg
+32/status playmode_shuffle.svg media-playlist-shuffle.svg
 ####
 32/places desktop.svg user-desktop.svg
 32/places trash_empty.svg emptytrash.svg user-trash.svg
@@ -1114,6 +1120,8 @@
 48/status dialog-warning.svg gtk-dialog-warning.svg dialog-warning-symbolic.svg
 48/status network2.svg network_local.svg network-workgroup.svg gtk-network.svg network-wired.svg network.svg network-idle.svg
 48/status caps-lock-warning.svg gtk-caps-lock-warning.svg
+48/status playmode_loop.svg media-playlist-repeat.svg
+48/status playmode_shuffle.svg media-playlist-shuffle.svg
 ####
 48/places desktop.svg user-desktop.svg
 48/places trash_empty.svg emptytrash.svg user-trash.svg
