--- a/theme.conf
+++ b/theme.conf
@@ -74,7 +74,7 @@
 ####
 16/mimetypes application-pet.svg
 16/mimetypes pdf.svg application-pdf.svg
-16/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+16/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 16/mimetypes application-rss+xml.svg application-atom+xml.svg
 16/mimetypes application-postscript.svg application-x-gzpostscript.svg
 16/mimetypes application-rtf.svg application-x-abiword.svg
@@ -340,7 +340,7 @@
 ####
 22/mimetypes application-pet.svg
 22/mimetypes pdf.svg application-pdf.svg
-22/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+22/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 22/mimetypes application-rss+xml.svg application-atom+xml.svg
 22/mimetypes application-postscript.svg application-x-gzpostscript.svg
 22/mimetypes application-rtf.svg application-x-abiword.svg
@@ -606,7 +606,7 @@
 ####
 24/mimetypes application-pet.svg
 24/mimetypes pdf.svg application-pdf.svg
-24/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+24/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 24/mimetypes application-rss+xml.svg application-atom+xml.svg
 24/mimetypes application-postscript.svg application-x-gzpostscript.svg
 24/mimetypes application-rtf.svg application-x-abiword.svg
@@ -871,7 +871,7 @@
 ####
 32/mimetypes application-pet.svg
 32/mimetypes pdf.svg application-pdf.svg
-32/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+32/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 32/mimetypes application-rss+xml.svg application-atom+xml.svg
 32/mimetypes application-postscript.svg application-x-gzpostscript.svg
 32/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1140,7 +1140,7 @@
 ####
 48/mimetypes application-pet.svg
 48/mimetypes pdf.svg application-pdf.svg
-48/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+48/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 48/mimetypes application-rss+xml.svg application-atom+xml.svg
 48/mimetypes application-postscript.svg application-x-gzpostscript.svg
 48/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1404,7 +1404,7 @@
 ####
 64/mimetypes application-pet.svg
 64/mimetypes pdf.svg application-pdf.svg
-64/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+64/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 64/mimetypes application-rss+xml.svg application-atom+xml.svg
 64/mimetypes application-postscript.svg application-x-gzpostscript.svg
 64/mimetypes application-rtf.svg application-x-abiword.svg
@@ -1662,7 +1662,7 @@ scalable/places bookmark.svg user-bookmarks.svg
 ####
 scalable/mimetypes application-pet.svg
 scalable/mimetypes pdf.svg application-pdf.svg
-scalable/mimetypes application-kernel.svg application-x-linux-kernel.svg application-x-img.svg
+scalable/mimetypes application-kernel.svg application-linux-kernel.svg application-x-linux-kernel.svg
 scalable/mimetypes application-rss+xml.svg application-atom+xml.svg
 scalable/mimetypes application-postscript.svg application-x-gzpostscript.svg
 scalable/mimetypes application-rtf.svg application-x-abiword.svg
