Add directory-remote and links

--- a/theme.conf
+++ b/theme.conf
@@ -66,6 +66,7 @@
 16/places directory-home.svg folder_home.svg user-home.svg
 16/places directory-images.svg folder_images.svg folder-pictures.svg
 16/places directory-music.svg folder-music.svg
+16/places directory-remote.svg folder-remote.svg
 16/places open.svg folder-open.svg stock_open.svg
 16/places directory-video.svg folder-videos.svg
 16/places server.svg network-server.svg redhat-network-server.svg
@@ -332,6 +333,7 @@
 22/places directory-home.svg folder_home.svg user-home.svg
 22/places directory-images.svg folder_images.svg folder-pictures.svg
 22/places directory-music.svg folder-music.svg
+22/places directory-remote.svg folder-remote.svg
 22/places open.svg folder-open.svg stock_open.svg
 22/places directory-video.svg folder-videos.svg
 22/places server.svg network-server.svg redhat-network-server.svg
@@ -598,6 +600,7 @@
 24/places directory-home.svg folder_home.svg user-home.svg
 24/places directory-images.svg folder_images.svg folder-pictures.svg
 24/places directory-music.svg folder-music.svg
+24/places directory-remote.svg folder-remote.svg
 24/places open.svg folder-open.svg stock_open.svg
 24/places directory-video.svg folder-videos.svg
 24/places server.svg network-server.svg redhat-network-server.svg
@@ -863,6 +866,7 @@
 32/places directory-home.svg folder_home.svg user-home.svg
 32/places directory-images.svg folder_images.svg folder-pictures.svg
 32/places directory-music.svg folder-music.svg
+32/places directory-remote.svg folder-remote.svg
 32/places open.svg folder-open.svg stock_open.svg
 32/places directory-video.svg folder-videos.svg
 32/places server.svg network-server.svg redhat-network-server.svg
@@ -1132,6 +1136,7 @@
 48/places directory-home.svg folder_home.svg user-home.svg
 48/places directory-images.svg folder_images.svg folder-pictures.svg
 48/places directory-music.svg folder-music.svg
+48/places directory-remote.svg folder-remote.svg
 48/places open.svg folder-open.svg stock_open.svg
 48/places directory-video.svg folder-videos.svg
 48/places server.svg network-server.svg redhat-network-server.svg
@@ -1396,6 +1401,7 @@
 64/places directory-home.svg folder_home.svg user-home.svg
 64/places directory-images.svg folder_images.svg folder-pictures.svg
 64/places directory-music.svg folder-music.svg
+64/places directory-remote.svg folder-remote.svg
 64/places open.svg folder-open.svg stock_open.svg
 64/places directory-video.svg folder-videos.svg
 64/places server.svg network-server.svg redhat-network-server.svg
@@ -1654,6 +1660,7 @@ scalable/places directory-downloads.svg folder-downloads.svg folder-download.svg
 scalable/places directory-home.svg folder_home.svg user-home.svg
 scalable/places directory-images.svg folder_images.svg folder-pictures.svg
 scalable/places directory-music.svg folder-music.svg
+scalable/places directory-remote.svg folder-remote.svg
 scalable/places open.svg folder-open.svg stock_open.svg
 scalable/places directory-video.svg folder-videos.svg
 scalable/places server.svg network-server.svg redhat-network-server.svg
