Modify build files

--- a/build.conf
+++ b/build.conf
@@ -1,2 +1,9 @@
 NAME="Puppy Flat" 
 COMMENT="A GTK Icon Theme by zigbert, technosaurus and 01micko"
+VIEWBOX="0 0 100 100"
+THEME=${NAME}
+PKG=${THEME/ /_}
+PKG=${PKG,,}_icons
+VER=0.10
+# comment if using another distro
+PUPPY=true
