--- a/theme.conf
+++ b/theme.conf
@@ -149,7 +149,7 @@
 16/mimetypes application-x-bit.svg application-x-bittorrent.svg
 16/mimetypes application-x-cd-image.svg
 16/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
-16/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+16/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 16/mimetypes application-x-rpm.svg
 16/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 16/mimetypes application-zip.svg
@@ -591,7 +591,7 @@
 22/mimetypes application-x-bit.svg application-x-bittorrent.svg
 22/mimetypes application-x-cd-image.svg
 22/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
-22/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+22/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 22/mimetypes application-x-rpm.svg
 22/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 22/mimetypes application-zip.svg
@@ -1033,7 +1033,7 @@
 24/mimetypes application-x-bit.svg application-x-bittorrent.svg
 24/mimetypes application-x-cd-image.svg
 24/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
-24/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+24/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 24/mimetypes application-x-rpm.svg
 24/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 24/mimetypes application-zip.svg
@@ -1496,7 +1496,7 @@
 32/mimetypes application-x-bit.svg application-x-bittorrent.svg
 32/mimetypes application-x-cd-image.svg
 32/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg 
-32/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+32/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 32/mimetypes application-x-rpm.svg
 32/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 32/mimetypes application-zip.svg
@@ -1942,7 +1942,7 @@
 48/mimetypes application-x-bit.svg application-x-bittorrent.svg
 48/mimetypes application-x-cd-image.svg
 48/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
-48/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+48/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 48/mimetypes application-x-rpm.svg
 48/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 48/mimetypes application-zip.svg
@@ -2382,7 +2382,7 @@
 64/mimetypes application-x-bit.svg application-x-bittorrent.svg
 64/mimetypes application-x-cd-image.svg
 64/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
-64/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg
+64/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 64/mimetypes application-x-rpm.svg
 64/mimetypes application-x-deb.svg application-vnd.debian.binary-package.svg
 64/mimetypes application-zip.svg
