--- a/theme.conf
+++ b/theme.conf
@@ -233,7 +233,7 @@
 16/actions disconnect.svg gtk-disconnect.svg
 16/actions trash.svg gtk-delete.svg list-remove.svg edit-delete.svg
 16/actions trash_undelete.svg gtk-undelete.svg list-restore.svg edit-undelete.svg
-16/actions edit.svg gtk-edit.svg
+16/actions edit.svg gtk-edit.svg document-edit.svg
 16/actions execute.svg gtk-execute.svg system-run.svg
 16/actions execute_inspect.svg gtk-find-and-replace.svg edit-find-replace.svg
 16/actions find.svg gtk-find.svg edit-find.svg
