--- a/theme.conf
+++ b/theme.conf
@@ -894,7 +894,7 @@
 24/apps chrome.svg
 24/apps chromium.svg
 24/apps book_dictionary.svg accessories-dictionary.svg
-24/apps edit.svg accessories-text-editor.svg leafpad.svg16/actions edit.svg document-edit.svg
+24/apps edit.svg accessories-text-editor.svg leafpad.svg
 24/apps geany.svg
 24/apps spreadsheet.svg gnumeric.svg
 24/apps pdf.svg acroread.svg
