--- a/theme.conf
+++ b/theme.conf
@@ -240,7 +240,7 @@
 16/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 16/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 16/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-16/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+16/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 16/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 16/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 16/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -683,7 +683,7 @@
 22/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 22/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 22/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-22/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+22/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 22/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 22/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 22/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -1126,7 +1126,7 @@
 24/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 24/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 24/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-24/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+24/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 24/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 24/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 24/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -1590,7 +1590,7 @@
 32/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 32/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 32/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-32/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+32/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 32/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 32/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 32/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -2037,7 +2037,7 @@
 48/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 48/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 48/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-48/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+48/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 48/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 48/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 48/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -2478,7 +2478,7 @@
 64/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 64/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 64/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-64/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+64/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 64/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 64/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 64/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
@@ -2914,7 +2914,7 @@ scalable/actions find.svg gtk-find.svg edit-find.svg
 scalable/actions fullscreen.svg gtk-fullscreen.svg view-fullscreen.svg stock_fullscreen.svg window_fullscreen.svg
 scalable/actions leave-fullscreen.svg gtk-leave-fullscreen.svg view-restore.svg stock_leave-fullscreen.svg window_nofullscreen.svg
 scalable/actions arrow_mini_left.svg gtk-go-back-ltr.svg go-previous.svg gtk-go-forward-rtl.svg
-scalable/actions arrow_mini_right.svg gtk-go-back-rtlsvg go-next.svg gtk-go-forward-ltr.svg
+scalable/actions arrow_mini_right.svg gtk-go-back-rtl.svg go-next.svg gtk-go-forward-ltr.svg
 scalable/actions arrow_mini_down.svg gtk-go-down.svg go-down.svg
 scalable/actions arrow_mini_down_bottom.svg gtk-goto-bottom.svg go-bottom.svg
 scalable/actions arrow_mini_up_top.svg gtk-goto-top.svg go-top.svg
