mime vnd.efi.i**

--- a/theme.conf
+++ b/theme.conf
@@ -2818,6 +2818,8 @@ scalable/mimetypes application-kernel.svg application-linux-kernel.svg applicati
 scalable/mimetypes application-rss+xml.svg application-atom+xml.svg
 scalable/mimetypes application-postscript.svg application-x-gzpostscript.svg
 scalable/mimetypes application-rtf.svg application-x-abiword.svg
+scalable/mimetypes application-vnd.efi.img.svg
+scalable/mimetypes application-vnd.efi.iso.svg
 scalable/mimetypes application-vnd.ms-excel.svg
 scalable/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 scalable/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
