Fix https://github.com/puppylinux-woof-CE/Pmaterial/issues/12 for this repo

--- a/theme.conf
+++ b/theme.conf
@@ -270,7 +270,7 @@
 16/actions media-eject.svg player-eject.svg
 16/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 16/actions dialog-no.svg gtk-no.svg
-16/actions ok.svg gtk-ok.svg dialog-ok.svg
+16/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 16/actions open.svg gtk-open.svg document-open.svg
 16/actions paste.svg gtk-paste.svg edit-paste.svg
 16/actions print.svg gtk-print.svg document-print.svg
@@ -713,7 +713,7 @@
 22/actions media-eject.svg player-eject.svg
 22/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 22/actions dialog-no.svg gtk-no.svg
-22/actions ok.svg gtk-ok.svg dialog-ok.svg
+22/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 22/actions open.svg gtk-open.svg document-open.svg
 22/actions paste.svg gtk-paste.svg edit-paste.svg
 22/actions print.svg gtk-print.svg document-print.svg
@@ -1156,7 +1156,7 @@
 24/actions media-eject.svg player-eject.svg
 24/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 24/actions dialog-no.svg gtk-no.svg
-24/actions ok.svg gtk-ok.svg dialog-ok.svg
+24/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 24/actions open.svg gtk-open.svg document-open.svg
 24/actions paste.svg gtk-paste.svg edit-paste.svg
 24/actions print.svg gtk-print.svg document-print.svg
@@ -1620,7 +1620,7 @@
 32/actions media-eject.svg player-eject.svg
 32/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 32/actions dialog-no.svg gtk-no.svg
-32/actions ok.svg gtk-ok.svg dialog-ok.svg
+32/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 32/actions open.svg gtk-open.svg document-open.svg
 32/actions paste.svg gtk-paste.svg edit-paste.svg
 32/actions print.svg gtk-print.svg document-print.svg
@@ -2067,7 +2067,7 @@
 48/actions media-eject.svg player-eject.svg
 48/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 48/actions dialog-no.svg gtk-no.svg
-48/actions ok.svg gtk-ok.svg dialog-ok.svg
+48/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 48/actions open.svg gtk-open.svg document-open.svg
 48/actions paste.svg gtk-paste.svg edit-paste.svg
 48/actions print.svg gtk-print.svg document-print.svg
@@ -2506,7 +2506,7 @@
 64/actions media-eject.svg player-eject.svg
 64/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 64/actions dialog-no.svg gtk-no.svg
-64/actions ok.svg gtk-ok.svg dialog-ok.svg
+64/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 64/actions open.svg gtk-open.svg document-open.svg
 64/actions paste.svg gtk-paste.svg edit-paste.svg
 64/actions print.svg gtk-print.svg document-print.svg
@@ -2942,7 +2942,7 @@ scalable/actions media-stop.svg gtk-media-stop.svg media-playback-stop.svg
 scalable/actions media-eject.svg player-eject.svg
 scalable/actions new.svg gtk-new.svg document-new.svg gtk-file.svg document-x-generic.svg
 scalable/actions dialog-no.svg gtk-no.svg
-scalable/actions ok.svg gtk-ok.svg dialog-ok.svg
+scalable/actions ok.svg gtk-ok.svg dialog-ok.svg object-select-symbolic.svg
 scalable/actions open.svg gtk-open.svg document-open.svg
 scalable/actions paste.svg gtk-paste.svg edit-paste.svg
 scalable/actions print.svg gtk-print.svg document-print.svg
